Use min-height in order to prevent flickering.

--- a/modules/com.alkacon.bootstrap.solr/resources/system/modules/com.alkacon.bootstrap.solr/resources/css/search.css
+++ b/modules/com.alkacon.bootstrap.solr/resources/system/modules/com.alkacon.bootstrap.solr/resources/css/search.css
@@ -1,6 +1,7 @@
-.bodyScroll {
-	overflow-y: scroll;
+#alkaconSolrSearch {
+	min-height: 550px;
 }
+
 .gwt-SuggestBoxPopup {
 	margin-left: -1px;
 	z-index: 1000;
